--- a/app/views/spree/checkout/payment/_paypal.html.erb
+++ b/app/views/spree/checkout/payment/_paypal.html.erb
@@ -1,1 +1,8 @@
+
 <%= link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), paypal_express_url(:payment_method_id => payment_method.id), :method => :post, :id => "paypal_button") %>
+
+<script>
+  $(document).ready(function() {
+    SpreePaypalExpress.paymentMethodID = "<%= payment_method.id %>" 
+  })
+ </script>
