--- a/app/views/spree/admin/payments/_paypal_complete.html.erb
+++ b/app/views/spree/admin/payments/_paypal_complete.html.erb
@@ -2,10 +2,10 @@
   <div class="label-block left five columns alpha">
     <div>
       <fieldset data-hook="admin_variant_new_form">
-        <legend><%= Spree.t('refund', :scope => :paypal) %></legend>
+        <legend><%= t('refund', :scope => :paypal) %></legend>
         <div class='field'>
-          <%= label_tag 'refund_amount', Spree.t(:refund_amount, :scope => 'paypal') %>
-          <small><em><%= Spree.t(:original_amount, :scope => 'paypal', :amount => @payment.display_amount) %></em></small><br>
+          <%= label_tag 'refund_amount', t(:refund_amount, :scope => 'paypal') %>
+          <small><em><%= t(:original_amount, :scope => 'paypal', :amount => @payment.display_amount) %></em></small><br>
           <% symbol = ::Money.new(1, Spree::Config[:currency]).symbol %>
           <% if Spree::Config[:currency_symbol_position] == "before" %>
             <%= symbol %><%= text_field_tag 'refund_amount', @payment.amount %>
@@ -13,7 +13,7 @@
             <%= text_field_tag 'refund_amount', @payment.amount %><%= symbol %>
           <% end %>
         </div>
-        <%= button Spree.t(:refund, :scope => 'paypal'), 'icon-dollar' %>
+        <%= button t(:refund, :scope => 'paypal'), 'icon-dollar' %>
       </fieldset>
     </div>
   </div>
