create a new payment when refund successful
this new payment is an offset of the original payment, source is the actual payment
- clarify refund source vs payment source on refund spec feature tests
- make sure a new order was being created always on admin context for refunds feature spec
- paypal refund view will always autofill input box with the biggest refund value possible (outstanding balance, payment amount left)

fixes #82

--- a/app/views/spree/admin/payments/paypal_refund.html.erb
+++ b/app/views/spree/admin/payments/paypal_refund.html.erb
@@ -19,9 +19,9 @@
           <small><em><%= Spree.t(:original_amount, :scope => 'paypal', :amount => @payment.display_amount) %></em></small><br>
           <% symbol = ::Money.new(1, Spree::Config[:currency]).symbol %>
           <% if Spree::Config[:currency_symbol_position] == "before" %>
-            <%= symbol %><%= text_field_tag 'refund_amount', @payment.amount %>
+            <%= symbol %><%= text_field_tag 'refund_amount', @refund_amount %>
           <% else %>
-            <%= text_field_tag 'refund_amount', @payment.amount %><%= symbol %>
+            <%= text_field_tag 'refund_amount', @refund_amount %><%= symbol %>
           <% end %>
         </div>
         <%= button Spree.t(:refund, :scope => 'paypal'), 'icon-dollar' %>
