Show relevant info on backend payments section
this will only work if the spree branch you are using contains e834f0d5d79a16fd14f38da2cbdb77396d8228da

--- a/app/views/spree/admin/payments/source_forms/_paypal.html.erb
+++ b/app/views/spree/admin/payments/source_forms/_paypal.html.erb
@@ -1,6 +1,3 @@
-<div id='paypal-warning' style="display:none">
+<fieldset id="<%= payment_method.name.parameterize %>" class="no-border-bottom">
   <strong><%= Spree.t('no_payment_via_admin_backend', :scope => 'paypal') %></strong>
-</div>
-<script>
-  SpreePaypalExpress.paymentMethodID = "<%= payment_method.id %>"
-</script>
+</fieldset>
