Use correct currency symbol for master branch.

--- a/app/views/spree/admin/payments/paypal_refund.html.erb
+++ b/app/views/spree/admin/payments/paypal_refund.html.erb
@@ -24,7 +24,7 @@
             <%= text_field_tag 'refund_amount', @payment.amount %><%= symbol %>
           <% end %>
         </div>
-        <%= button Spree.t(:refund, :scope => 'paypal'), 'icon-dollar' %>
+        <%= button Spree.t(:refund, scope: 'paypal'), 'money' %>
       </fieldset>
     </div>
   </div>
