--- a/app/views/spree/admin/payments/source_views/_paypal.html.erb
+++ b/app/views/spree/admin/payments/source_views/_paypal.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <% if payment.source.state != 'refunded' %>
-      <%= button_link_to Spree.t('actions.refund', :scope => :paypal), spree.paypal_refund_admin_order_payment_path(@order, payment), :icon => 'icon-dollar' %>
+      <%= button_link_to Spree.t('actions.refund', scope: :paypal), spree.paypal_refund_admin_order_payment_path(@order, payment), icon: 'money' %>
     <% else %>
       <div class="alpha six columns">
         <dl>
