--- a/app/views/spree/checkout/payment/_paypal.html.erb
+++ b/app/views/spree/checkout/payment/_paypal.html.erb
@@ -1,6 +1,11 @@
-
-<%= link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), paypal_express_url(:payment_method_id => payment_method.id), :method => :post, :id => "paypal_button") %>
-
+<div class="mt-3">
+  <%= link_to(
+    image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"),
+    paypal_express_url(:payment_method_id => payment_method.id),
+    :method => :post,
+    :id => "paypal_button"
+  ) %>
+</div>
 <script>
   SpreePaypalExpress.paymentMethodID = "<%= payment_method.id %>"  
  </script>
