--- a/app/views/spree/admin/payments/source_views/_paypal.html.erb
+++ b/app/views/spree/admin/payments/source_views/_paypal.html.erb
@@ -1,8 +1,10 @@
 <fieldset data-hook="paypal">
-  <legend align="center"><%= Spree.t(:transaction, :scope => :paypal) %></legend>
+  <legend align="center">
+    <%= Spree.t(:transaction, :scope => :paypal) %>
+  </legend>
 
   <div class="row">
-    <div class="alpha six columns">
+    <div class="col-6">
       <dl>
         <dt><%= Spree.t(:payer_id, :scope => :paypal) %>:</dt>
         <dd><%= payment.source.payer_id %></dd>
@@ -18,7 +20,7 @@
     <% if payment.source.state != 'refunded' %>
       <%= button_link_to Spree.t('actions.refund', scope: :paypal), spree.paypal_refund_admin_order_payment_path(@order, payment), icon: 'money' %>
     <% else %>
-      <div class="alpha six columns">
+      <div class="col-6">
         <dl>
           <dt><%= Spree.t(:state, :scope => :paypal) %>:</dt>
           <dd><%= payment.source.state.titleize %></dd>
