--- a/app/views/spree/checkout/payment/_paypal.html.erb
+++ b/app/views/spree/checkout/payment/_paypal.html.erb
@@ -2,5 +2,7 @@
 <%= link_to(image_tag("https://www.paypal.com/en_US/i/btn/btn_xpressCheckout.gif"), paypal_express_url(:payment_method_id => payment_method.id), :method => :post, :id => "paypal_button") %>
 
 <script>
-  SpreePaypalExpress.paymentMethodID = "<%= payment_method.id %>"  
- </script>
+  document.addEventListener("DOMContentLoaded", function() {
+    SpreePaypalExpress.paymentMethodID = "<%= payment_method.id %>" 
+  })
+</script>
